--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title:            HYUNMI OH
 description:      Hyunmi's personal website
 copyright:        HYUNMI OH
-baseurl: /
-url: http://ohyunmii.github.io
+url: https://ohyunmii.github.io
 
 
 future:      false  # publish future dated posts --  true, false (default)
