changed made to posts, layout

--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,10 @@ sass:
   sass_dir: _sass
   style: compressed
 
-permalink: /:categories/:year-:month-:day/:title.html
 
 # Amount of post to show on home page
 paginate: 5
+paginate_path: "/projects/:num/"
 
 #kramdown:
 #  input: GFM
